# This file is part of guetzli-sys. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/guetzli-sys/master/COPYRIGHT. No part of guetzli-sys, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of guetzli-sys. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/guetzli-sys/master/COPYRIGHT.


[package]
name = "guetzli-sys"
description = "FFI bindings to Google's guetzli library"
keywords = ["guetzli", "jpeg", "image"]
categories = ["external-ffi-bindings", "web-programming", "compression", "encoding", "multimedia"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/guetzli-sys/blob/master/README.md"
homepage = "https://github.com/lemonrock/guetzli-sys"
repository = "https://github.com/lemonrock/guetzli-sys.git"
exclude = ["*"]
include = ["/README.md", "/LICENSE", "/COPYRIGHT", "/Cargo.toml", "/rustfmt.toml", "/clippy.toml", "/src/*.rs", "/lib/guetzli/LICENSE", "/lib/guetzli/guetzli/**", "/lib/guetzli/third_party/butteraugli/LICENSE", "/lib/guetzli/third_party/butteraugli/butteraugli/**"]
build = "src/build.rs"
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
cpp = "0.3"
libc = "0.2"
quick-error = "1.2"

[build-dependencies]
cpp_build = "0.3"
cc = { version = "1.0.0", features = ["parallel"] }
